work on part two and the start of part three

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -503,13 +503,11 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 
 
 
-## 1. Facilitator conflict addressing tensions between privileging participant choices or underlying computing concepts
+## 1. Conflicts stemming from tensions between privileging participant choices or underlying computing and systems concepts
 
 While the focus on this research is informal environment, I wanted to create resources and processes which are of potential value to practitioners in the UK classroom. Chapter two explored ways in which digital game making is commonly aligned with curricular areas [@kafai_connected_2016]. It also surfaced tensions that emerge between the exploration of curricular concepts participants desire to follow activities following learner expression and choice [@hoyles_pedagogy_1992].
 
 This section addresses my interventions to resolve this tension. From my own perspective as a research designer/facilitator, there are two dimensions of contradiction which are explored in the following section: one my perception of the contradiction between curriculum and learner choice; the second a conflict which manifested via my hesitancy to introduce tools and activities designed to address this tension.
-
-Analysis of my journal notes shows that I spent significant time exploring how best to support participant awareness of underlying computational and systems thinking concepts without detracting from their valuable experiential progress.
 
 
 <!-- This conflict provoked me to create resources which could serve to pull participants towards more curricular goals. I adapted and extended resources to suit use in more formal learning environments, e.g. particularly a secondary computing classroom. -->
@@ -524,8 +522,6 @@ As learners traced a trail between the different island/missions they had visite
 Research on _concept maps_ [@canas2003summary] as methods for teachers and researchers to identify key learning suited to particular computing projects has gained traction in the field of computing education [@keppens_concept_2008; @noauthor_quick_2020; @weinerth_concept_2014]. The value of facilitators presenting concepts  and asking students to create maps of concepts for formative assessment. In addition, there is value in mapping which are likely to occur in project work especially when such concepts are embedded in activity in a way which resists superficial analysis. Research on hands-on tinkering in science museums by Bevan and Petrich [-@petrich_it_2013] together with educators examined video footage of families interacting with exhibits to make a structured list of the learning they observed. The resulting map of learning dimensions included underlying science concepts but also contained more general skills and helping behaviours involved in exploratory learning processes.
 
 <!-- In learning environments where there is a lot of choice assessing learners via observation is beneficial. Rather than deciding what you want to teach and testing students on that area, you can map the learning happening in an authentic activity. -->
-
-
 
 <!-- Another chapter in this collection identified concept maps and observation as methods for teachers and researchers to identify key learning suited to particular computing projects.  -->
 
@@ -554,10 +550,9 @@ This process of mapping this framework is potentially of use for teachers and ot
 
 The process of adapting this learning design to the needs of more formal settings can be aligned to existing research on this area. For example the concept of semantic waves is relevant here as a way of visioning the alternation between concrete design experience and communicating the underlying abstract concepts [@curzon_using_2020; @maton_making_2013].   
 
-However, despite this alignment and potential utility in a formal setting, I was reluctant to introduce these resources in this setting. Instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities. In retrospect, my inaction seems appropriate to the informal context of this environment, reflecting the lack of external motivation for participants and myself to align to curricular concepts, and a valid reluctance to introduce additional distracting stimulus. While, this perspective aligns with socio-cultural understandings of learning which problematise the separation of the content to be learned from the embodied activity itself [find source/s], this alignment did not halt my concern over remaining locked into concrete experience and not noticing repeated abstract concepts which could be of future use. Hoyles and Noss term this tension a
-'play paradox' [@hoyles_pedagogy_1992, p.46].
+However, despite this alignment and potential utility in a school setting, I was reluctant to introduce these resources in this informal context, reflecting the lack of external motivation for participants to align with curricular demands driven by exam requirements. Introducing additional mediational tools with the aim of the communicating and reinforcing abstract computing or systems concepts risked effectively establishing a new competing activity system. This perspective validates my reluctance to introduce additional distracting stimulus, instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities.
 
-My ongoing discomfort surrounding the validity of the learning experience without direct alignment to abstract content, stem from wider concerns around avoiding danger of tacit learning by reinforcing learning and spur metacognition. In retrospect, analysis of the wider learning experience of shows that opportunities for such alignment did exist beyond those imposed in external documentation via social processes. This theme is explored in more detail in chapter six.
+However, while this approach aligns with situated  understandings of knowledge which problematise the separation of the content to be learned from the embodied social activity itself [@rogoff_observing_1995; @leontev_problem_1974], this alignment did not halt my concern over remaining locked into concrete experience and not noticing repeated abstract concepts which could be of future generalised utility [@maton_making_2013]. My ongoing discomfort surrounding the validity of the learning experience without direct alignment to abstract content, stem from wider concerns around avoiding danger of tacit learning by reinforcing learning and spur metacognition [@gherardi_toward_1998]. Even if generalisable concepts can be explored in the context of an learner-driven activity, they may not be encountered of noticed without guidance from others. Hoyles and Noss term this tension a 'play paradox' [@hoyles_pedagogy_1992, p.46]. This theme is explored in more detail in chapter six concentrating on social processes rather than external documentation.
 
 
 <!-- Thus, while this aspect and merits further exploration to potential help classroom practice, this is be beyond the scope of this thesis. -->
@@ -575,18 +570,11 @@ My progress in this study would have been more direct if I had not attempted to 
 The process of researching conceptions of agency has allowed me to align my intuitive reluctance to steer participants towards the more abstract curricular concepts to interpretations of agency. In particular, Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals resonates. -->
 
 
-
-
-
-
 <!-- My experience of the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The following section aims to summarise the alignment of the potential of this work with existing research -->
 
 <!-- NOTE - Reduce this down to text - as too close to the end table. And reduce in significance. -->
 
 <!-- - It may not be clear how teachers can best support the direction of learners - addressed by the map linked to the collection of GDP used to support and identify possible pathways. -->
-
-
-
 
 <!-- Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities. To address this I identified and highlighted systems related design patterns themed as challenge-related patterns to explore systems concepts within the game context. This approach mirrors work undertaken by Gary on Game Star Mechanic , where -->
 
@@ -597,17 +585,7 @@ The process of researching conceptions of agency has allowed me to align my intu
 <!-- I also de-prioritised learning maps as an area of study in this thesis partly this is due to it well explored in other research []FIND SOURCES, -->
 <!-- and partly as the implementation was patchy as I concentrated on more narrative and in person reflection (see later chapter on Methods) -->
 
-
-
-
 <!-- The process of using these resources to align and highlight the design activities to underlying concepts is not explored in this study from the perspective of learners. -->
-
-
-
-
-
-
-
 
 
 <!--
@@ -626,33 +604,6 @@ _Map of Learning Dimensions of the 3M Game Making Approach_
  - Draw on material and critique in chapter on semantic profiles / waves. -->
 
 
-<!--
-### Using Physical Maps of Missions as Game Design Patterns
-
-I used flip chart paper and print outs to draw a coastal landscape with GDPs represented as different islands.  I asked learners to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it.
-
-![learning islands](./Pictures/navigational_paper_map.png){width=95%}
-![learning islands]({{ site.imgurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png){width=95%}
-_Missions as Islands_
-
-My motivations for this intervention were that it encourage a sense of community and peer learning, to help learners navigate their design experience and that the process would encourage reflect on the coding concepts or other learning dimensions that they had been working with. The use of space on the map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions.
-
-The following excerpts of dialogue are from a fuller transcription in appendix 4.x
-
-  Mick(f): I'm putting the ones that are hardest further away from our home island. So, because keys and doors is quite tricky, I'm going to put that one over there in the corner, if that's one that you're working on.  ( Mick cuts a out an image from [^4] representing a GDP of key and doors.)     Olivia(c): So I've gone really far away on the map.
-
-The process of mapping the difficulty is something that the child picks up on here. Moments after we see a parent using the map and the resources to help her child fix a goal for the session.
-
-  Rozanne(p): Oh that's something you were wanting to do	(Roxanne points at a cut out that Mick has just stuck down.)
-  Richie(c): I like the idea of making the enemies move.
-  Roxanne(p): Ok, there's a worksheet here about that. So you don't want to any any heath meter?
-  Richie(c): No.
-  Roxanne(p): At least not right now. You want to to do this, on a sheet, right here, here you go.	(Roxanne waves sheet and smiles at Mick.)
-
-The new resources seem welcomed by the parent. This is probably as in previous sessions there had been conflict between them about goals. The process of aiding reflection and meta-cognition through the use of visual materials in the form of a map aligns with inclusive pedagogical design principles of UDL in that it provides means of action and expression. In chapter six, I explore the use of a process drama to achieve similar aims.
-
-While it is beyond the remit of this thesis to examine the impact of these processes in more curricular focused environments, the following section offers a synthesis of the ideas in explored in this chapter and alignment with existing research.
- -->
 
 <!--
 MOVE TO END CHAPTER?
@@ -707,9 +658,11 @@ This conflict involved accumulating tensions which resulted in families feeling 
 
 The shared in feedback (see appendix 4.x) the moment that decided their withdrawal. At one point they looked around and just saw people doing hardcore coding and no longer felt at home in the environment. In early sessions the family members had planned design on paper and created digital pixel art. In the end stages of the game production process, due to the dynamic of the larger group, they were reliant on others to implement code changes for their imagined game, unable to contribute fully at this point and found themselves isolated.
 
-To briefly summarise this dynamic using the language of 3GAT we can locate tensions between competing objectives. The shift from paper design stage with its greater freedom of choice and imagination to the technical limits and challenges appears to have created too great a rupture between this families objective to be creative and an uncompromising technical reality.  
+To briefly summarise this dynamic using the language of 3GAT we can locate tensions between competing objectives. The shift from paper design stage with its greater freedom of choice and imagination to the technical limits and challenges appears to have created too great a rupture between this families objective to be creative and the technical environment they found themselves in available to them.
 
 This experience aligns with research in this area explored in the literature review which explore pedagogies to address barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. I have shared the crisis of this family in particular, as the process drove me to focus on and further develop inclusive cultural practices which are explored in chapter six. As part of this exploration, I address the tensions that were engendered by the larger group size and the seriousness of end stages of coding.
+
+While this conflict is cultural in nature, it is compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. The next section explores this related conflict in more detail.
 
 
 <!-- NOTE - CREATE A LINK IN CHAPTER 6 - around line 300  -->
@@ -731,31 +684,25 @@ That week I had omitted them as I felt a sense of urgency coming from families t
 
 <!-- In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding. -->
 
-## 3. Tensions due to lack of access and familiarity to tools and processes
-
-In the terminology of activity theory, a conflicts arose due to a contradictions between the desire of participants to use the tools to create games and their lack of experience and knowledge of them. This often resulted in frustration and paralysis in the activity in question. One conflict, which surfaced in P1, stemmed from unfamiliarity with tools and resulted in frustration and ultimately inaction. In participant feedback for P1, one parent of the family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach.
-
-While, tensions stemming from gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting allowed for more flexible approaches. In P1 I trialled brief class instruction of key coding concepts, e.g. logic statements, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable. Instead, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010].
-
-SUM UP THE CONFLICT / TENSION MORE CLEARLY
-NOTE  - VERY SIMILAR FOR NEXT CONFLICT - GROUP OR MAKE DISTINCT.
-
-The crux of the challenge involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within that toolset to facilitate participants to address gaps in their knowledge without needing explicit instruction. The following sections explore the evolution of the tool selection and the tool use of participants in response to this conflict in the game making activity system.
+## 3. Tensions due to lack of access and familiarity to game programming tools and processes
 
 
+
+<!-- In P1 I trialled brief class instruction of key coding concepts, e.g. logic statements, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable. Instead, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010]. -->
+
+Conflicts arose due to a contradictions between the desire of participants to use the tools to create games and their lack of experience and knowledge of them.  The process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools. Thus crux of the conflict is that coding games to create a webpage using a text environment is a complex process. While some of the group had some experience, many did not. In early stages, this gulf tension between the need to use the tools and text coding processess often resulted in frustration and paralysis in the activity of game coding. While, tensions stemming from gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting allowed for more flexible approaches.
+
+The resulted in a design challenge involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within that toolset to facilitate participants to address gaps in their knowledge without needing explicit instruction. The following sections explore the evolution of the tool selection and the tool use of participants in response to this conflict in the game making activity system.
 
  <!-- namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement. -->
 
-
-### Motivations around in choice of toolset
-
-The process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools. One motivation was to align to authentic web technology due to my previous experience. The reason for working with code this authentic bears exploration. Characteristics of broader dimensions of authenticity of tools and processes in learning environments are explored in the literature review. A brief summary being: similarity to workplace settings; facilitating activity which serves a need of participants; an ability to showcased resulting work to an audience [@shaffer_thick_1999; @warr_bridging_2020]. While my choice of open source digital tools allowed for a high level of aligning with professional practices, it was also potentially complex in terms of use of tools. In part my motivation for choice of code language (Javascript, Phaser) was driven by desire to align with common workplace practices and to be potentially extensible for future student-led web projects.
+The motivation was to align to authentic web technology due to my previous experience. The reason for working with code this authentic bears exploration. Characteristics of broader dimensions of authenticity of tools and processes in learning environments are explored in the literature review. A brief summary being: similarity to workplace settings; facilitating activity which serves a need of participants; an ability to showcased resulting work to an audience [@shaffer_thick_1999; @warr_bridging_2020]. While my choice of open source digital tools allowed for a high level of aligning with professional practices, it was also potentially complex in terms of use of tools. In part my motivation for choice of code language (Javascript, Phaser) was driven by desire to align with common workplace practices and to be potentially extensible for future student-led web projects.
 
 <!-- As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch.  -->
 
 <!-- A common question for this research is why not use Scratch (see LR / Glossary)? While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people. I chose to not use Scratch for this study, partly as it was well researched and partly to prioritise authenticity of tool set.   -->
 
-By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game. This description encompasses the two main elements described in this section: first, the code playground toolset; and second the starting game template.
+By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game. The following section outlines responsive design  process surrounding two main elements: first, the code playground toolset; and second the starting game template.
 
 
 <!-- NOTE INTEGREATE HOW DESIGNING FOR AUTHENITITY IS A CHALLENGE HERE WHICH IS ALIGNED WITH PBL AND EXPERIENTIAL THEORY, FORESHADOW SHARED DIMENTIONS OF AUTHENTICITY WHICH ARE EXPLORED LATER. -->
@@ -1066,7 +1013,7 @@ DEVELOP THIS SECTION -->
 - This research also supports other research on the attraction (and motivation) of retro, (introduction) on culture and livingstone, sefon-green. -->
 
 
-## 4. Participant conflict due to lack of relevant technical support
+## 4. Participant conflict associated with project navigation and use of documentation
 
 **Nature of conflict**
 
