--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1266,15 +1266,11 @@ Resnick's design principles are focused on the affordances of tool for creative 
 
 MOVED - SO MERGE - As explored in the literature review, there is a wide gap between instruction based tutorials and unguided project challenges.
 
-Even with the process driven scaffolding that a working knowledge of PBL approaches provides, the domain specific knowledge and practices can be a significant challenge for teachers.
+Even with the process driven scaffolding that a working knowledge of PBL approaches provides, the domain specific knowledge and practices can be a significant challenge for teachers. Thus project work which can place a high demand on the project facilitator/s. This chapter charts the evolution of tools and resources which occupy this middle ground between instruction and free choice creative approaches. Following chapters explore the impact and resulting pedagogies in more depth.
 
-Thus project work which can place a high demand on the project facilitator/s. This chapter charts the evolution of tools and resources which occupy this middle ground between instruction and free choice creative approaches. Following chapters explore the impact and resulting pedagogies in more depth.
+A large body of research in this area is from a constructionism as a theoretical framework. For much of this work, the emphasis is on tools that can remove barriers to personal expression, rather than on pedagogic processes than can help teachers facilitate guided production. More recent work from researchers in this school has started to embrace the value of situated, community driven production as a lens [@kafai_theory_2020]. One of my central proposals regarding the methodology of this thesis is that while under-explored in this area, there is great potential in collaborative design based approaches to uncover situated and emergent practices in a way that can help seed community activity by other facilitators.
 
-The emphasis is on tools that can remove barriers to personal expression, rather than on pedagogic processes than can help teachers facilitate guided production. Viewed from a lens of situated, community driven production, there is a potential critique that these processes are under-explored in the school of constructionism.
-
-The following chapters have a focus on this gap.
-
-The next chapter explores a potentially fruitful aspect to help guidance for educational practitioners. The use of a design pattern approach. In this study the patterns take the form of working with common game elements game design patterns. In the language of the theoretical framework, I explore the process of working with GPDs as a germ cell of the overall game making activity.
+The following chapters have a focus on this gap. The next chapter explores a potentially fruitful aspect to help guidance for educational practitioners. The use of a design pattern approach. In this study the patterns take the form of working with common game elements game design patterns. In the language of the theoretical framework, I explore the process of working with GPDs as a germ cell of the overall game making activity. Chapter six explores the delivery and start to explore the impact of the process drama used and emerging community processes on cultural dimensions of the game making activity.
 
 <!-- Pivot to next chapter,
 
@@ -1284,15 +1280,6 @@ The next chapter explores a potentially fruitful aspect to help guidance for edu
 
 <!--
 NOTE - In the following chapters, social and cultural lenses are used to analyse video data. -->
-
-Chapter five explores the use of GDPs by participants in detail using varied data.
-
-Chapter six explores the delivery and start to explore the impact of the process drama used and emerging community processes.
-
-The chapter explores responses to the aspect of identity in more detail.
-
-As explored in literature review the possibility to change and to play with identity is important in the work of Gee and ITO, who explore the role of the design of games and the surrounding communities that build up around games to support an nurture the development of player identities. The process is shown to have beneficial effects in supporting the creative process. In a similar vein, drama processes like the mantle of the expert are designed and enacted by facilitators in ways which allow participants to draw on their existing knowledge and encourages them to put this into practice in fictional scenarios.
-
 
 <!-- NOT SURE WHAT TO DO WITH THIS IN THIS CHAPTER
  **Facilitators may have a more linear and limited view of ‘progress’ than learners:**
