--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1173,15 +1173,11 @@ An additional rationale for this process was to help reduce potential internal b
 
 ### On the emergent and mutual nature of the design and research process AND link to agency
 
-A different dimension of the agency in this learning process was present via the input of participants in the changing design of the program.
+In line with exploratory research perspectives, the development of the tools and processes used by participants in this study  emerged in response to my analysis of participant experience.
 
-As explored in chapter three, the process of this chapter is in line with exploratory research perspectives with an open remit to see what tensions come into focus in a particular setting.
+The most significant manifestation of this process is in the evolved of the learning design and resources. The trialling of the coding environment and starting templated occurred in various informal settings, over the course of two years and with input and concrete additions from parent volunteers, graduate trainee-teacher students, undergraduate students helpers University colleagues and with more indirect ongoing feedback from participating young people and their guardians.
 
-This allows a subsequent refocusing of research to explore these emerging issues in more depth. The most significant manifestation of this process is in the evolved of the learning design and resources.
-
-Resources had with concrete additions from parents, PGCE students, Edlab students, University colleagues and with more indirect ongoing feedback from young people and their parents.
-
-This approach was more prescriptive than I would have adopted, however it worked well. This hesitation overcome by intervention from others can be explored in terms of agency. The shift of perspective from others and the structure to try it out was very helpful in overcoming conflicts stemming from my pre-conceptions.
+The perspective from others was helpful to overcome conflicts stemming from my pre-conceptions. As an example the quick start activities created by PGCE students were much more directive than I would have proposed. However, the response of participants still engendered a diversity of experience, from these shared beginnings.  
 
 The implementation of discreet but potentially shared game elements became a shared pattern of activity. In early stages the mutual work to produce resources, techniques and practices to share and evaluate these shared elements became a primary focus of my work, just as the implementation of game elements was the focus of the work of participants.
 
@@ -1193,7 +1189,7 @@ Affordances within the domain of HCI research -->
 
 The particular nature of the informal setting with the participation of engaged parents is significant. It holds promise to generate resources and research more generally. This theme is further explored in conclusion of this thesis.
 
-
+A different dimension of the agency in this learning process was present via the input of participants in the changing design of the program.
 
 ### Discussion on authenticity and agency concerning tools and resources  
 <!-- NOTE- This chapter's coverage of tool use is incomplete and the use of physical arcade consoles is explored in chapter six.  -->
