--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1187,9 +1187,7 @@ The implementation of discreet but potentially shared game elements became a sha
 <!-- NOTE - NOT REALLY RELEVANT HERE
 Affordances within the domain of HCI research -->
 
-The particular nature of the informal setting with the participation of engaged parents is significant. It holds promise to generate resources and research more generally. This theme is further explored in conclusion of this thesis.
-
-A different dimension of the agency in this learning process was present via the input of participants in the changing design of the program.
+The particular nature of the informal setting with the participation of engaged parents is significant is potentially fertile ground in the generation of resources. More broadly my role as a facilitator here was in large part to recognise and support the emergence of a repertoire of varied emergent practices in the responses of participants, and then to support these practices with suitable tools and resources. In this way, I support participants to build agency in their transformation of learning process. 
 
 ### Discussion on authenticity and agency concerning tools and resources  
 <!-- NOTE- This chapter's coverage of tool use is incomplete and the use of physical arcade consoles is explored in chapter six.  -->
