--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1171,15 +1171,11 @@ An additional rationale for this process was to help reduce potential internal b
 ## Chapter Discussion
 
 
-### On the emergent and mutual nature of the design and research process AND link to agency
+### On the emergent and mutual nature of the design and research process
 
-In line with exploratory research perspectives, the development of the tools and processes used by participants in this study  emerged in response to my analysis of participant experience.
+In line with exploratory research perspectives, the development of the tools and processes used by participants in this study  emerged in response to my analysis of participant experience. The most significant manifestation of this process is in the evolved of the learning design and resources. The trialling of the coding environment and starting templated occurred in various informal settings, over the course of two years and with input and concrete additions from parent volunteers, graduate trainee-teacher students, undergraduate students helpers University colleagues and with more indirect ongoing feedback from participating young people and their guardians.
 
-The most significant manifestation of this process is in the evolved of the learning design and resources. The trialling of the coding environment and starting templated occurred in various informal settings, over the course of two years and with input and concrete additions from parent volunteers, graduate trainee-teacher students, undergraduate students helpers University colleagues and with more indirect ongoing feedback from participating young people and their guardians.
-
-The perspective from others was helpful to overcome conflicts stemming from my pre-conceptions. As an example the quick start activities created by PGCE students were much more directive than I would have proposed. However, the response of participants still engendered a diversity of experience, from these shared beginnings.  
-
-The implementation of discreet but potentially shared game elements became a shared pattern of activity. In early stages the mutual work to produce resources, techniques and practices to share and evaluate these shared elements became a primary focus of my work, just as the implementation of game elements was the focus of the work of participants.
+The perspective from others was helpful to overcome conflicts stemming from my pre-conceptions. As an example the quick start activities created by PGCE students were much more directive than I would have proposed. However, the response of participants still engendered a diversity of experience, from these shared beginnings. The implementation of discreet but potentially shared game elements became a shared pattern of activity. In early stages the mutual work to produce resources, techniques and practices to share and evaluate these shared elements became a primary focus of my work, just as the implementation of game elements was the focus of the work of participants.
 
 
 <!-- NOTE - INSERT RESPONSE FROM COMMENTS FROM CATHY. -->
@@ -1187,7 +1183,7 @@ The implementation of discreet but potentially shared game elements became a sha
 <!-- NOTE - NOT REALLY RELEVANT HERE
 Affordances within the domain of HCI research -->
 
-The particular nature of the informal setting with the participation of engaged parents is significant is potentially fertile ground in the generation of resources. More broadly my role as a facilitator here was in large part to recognise and support the emergence of a repertoire of varied emergent practices in the responses of participants, and then to support these practices with suitable tools and resources. In this way, I support participants to build agency in their transformation of learning process. 
+The particular nature of the informal setting with the participation of engaged parents is significant is potentially fertile ground in the generation of resources. More broadly my role as a facilitator here was in large part to recognise and support the emergence of a repertoire of varied emergent practices in the responses of participants, and then to support these practices with suitable tools and resources. In this way, I support participants to build agency in their transformation of learning process. While the value of participant input to intervention-based research is well explored in the fields of participatory research [find source/s], design-based approaches [find source/s] and formative interventions [find source/s], I propose that there is a particular potential engendered by the family dynamics in play. I explore the potential of this theme in more detail in the conclusion of this thesis.  
 
 ### Discussion on authenticity and agency concerning tools and resources  
 <!-- NOTE- This chapter's coverage of tool use is incomplete and the use of physical arcade consoles is explored in chapter six.  -->
