linking 3 and 4 and tocs

--- a/_posts/thesis_chapters/tocs/2023-12-5-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-12-5-Gdps.md_toc.md
@@ -6,51 +6,49 @@
         A](#descriptive-commentary-on-vignette-a)
 -   [Observations and analysis of use of Game Design Patterns by
     participants](#observations-and-analysis-of-use-of-game-design-patterns-by-participants)
+-   [Guided Particpation](#guided-particpation)
+    -   [GDPs used to scaffold ideation
+        processes](#gdps-used-to-scaffold-ideation-processes)
+        -   [GDPs as used by participants in their prioritisation in the
+            design
+            process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-design-process)
+    -   [GDPs offer the potential to assist project navigation, acting
+        as a framework for code examples and step-by-step
+        tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
+    -   [GDPs aiding the process of division of
+        labour](#gdps-aiding-the-process-of-division-of-labour)
+    -   [GDP driving adoption of emerging technical
+        processes](#gdp-driving-adoption-of-emerging-technical-processes)
+        -   [GDPs used to nurture tactical responses to errors and
+            blockages](#gdps-used-to-nurture-tactical-responses-to-errors-and-blockages)
+        -   [Use of GDPs to support debugging and the product revision
+            process - EDIT DOWN AND
+            MOVE](#use-of-gdps-to-support-debugging-and-the-product-revision-process---edit-down-and-move)
+        -   [Other examples of GDP driving adoption of technical
+            processes](#other-examples-of-gdp-driving-adoption-of-technical-processes)
+        -   [Use of evolving GDP terminology to facilitate working
+            practices - IS THERE ENOUGH HERE FOR A WHOLE
+            SECTION?](#use-of-evolving-gdp-terminology-to-facilitate-working-practices---is-there-enough-here-for-a-whole-section)
+-   [Cultural Dimension](#cultural-dimension)
+    -   [GDPs can encourage learners to design for others - ALSO LINKED
+        TO
+        IDEATION?](#gdps-can-encourage-learners-to-design-for-others---also-linked-to-ideation)
     -   [The propagation of use of GDPs through
         playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
     -   [GDPs facilitate the use of wider funds of
         knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
-    -   [GDPs can aid the use of documentation and
-        resources](#gdps-can-aid-the-use-of-documentation-and-resources)
-        -   [GDPs offer the potential to assist project navigation,
-            acting as a framework for code examples and step-by-step
-            tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
-        -   [GDPs helping navigation of external
-            documentation](#gdps-helping-navigation-of-external-documentation)
-        -   [Code patching process using GDPs as a
-            base](#code-patching-process-using-gdps-as-a-base)
-        -   [GDPs used to nurture tactical responses to errors and
-            blockages](#gdps-used-to-nurture-tactical-responses-to-errors-and-blockages)
-    -   [GDPs used to scaffold ideation
-        processes](#gdps-used-to-scaffold-ideation-processes)
-        -   [GDPs used to facilitate prioritisation in the design
-            process](#gdps-used-to-facilitate-prioritisation-in-the-design-process)
-    -   [GDPs aiding the process of division of
-        labour](#gdps-aiding-the-process-of-division-of-labour)
-    -   [GDPs can encourage learners to design for
-        others](#gdps-can-encourage-learners-to-design-for-others)
-    -   [GDP driving adoption of emerging technical
-        processes](#gdp-driving-adoption-of-emerging-technical-processes)
-        -   [Other examples of GDP driving adoption of technical
-            processes](#other-examples-of-gdp-driving-adoption-of-technical-processes)
-    -   [Repeated implementations of GDP developing fluency of coding
-        practices](#repeated-implementations-of-gdp-developing-fluency-of-coding-practices)
-    -   [Use of GDPs to support debugging and the product revision
-        process - EDIT DOWN AND
-        MOVE](#use-of-gdps-to-support-debugging-and-the-product-revision-process---edit-down-and-move)
-    -   [GDPs used to explore computational, design and systems
-        concepts](#gdps-used-to-explore-computational-design-and-systems-concepts)
+        -   [Problem solving practices as a fund of knowledge (but not
+            really
+            GDP)](#problem-solving-practices-as-a-fund-of-knowledge-but-not-really-gdp)
 -   [Discussion on the use of game design patterns in the 3M learning
     design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design)
     -   [Discussion on the use of design patterns and pattern
-        catalogues](#discussion-on-the-use-of-design-patterns-and-pattern-catalogues)
-    -   [Game design patterns as a intermediate-level construct to
-        facilitate developing coding
-        fluency](#game-design-patterns-as-a-intermediate-level-construct-to-facilitate-developing-coding-fluency)
-        -   [Problematising conceptions of abstract / concrete concepts
-            in computing
-            education.](#problematising-conceptions-of-abstract-concrete-concepts-in-computing-education.)
-        -   [Implications for facilitators and
-            designers](#implications-for-facilitators-and-designers)
+        catalogues - MERGE WITH THE SECTION
+        BELOW](#discussion-on-the-use-of-design-patterns-and-pattern-catalogues---merge-with-the-section-below)
+        -   [Game design patterns as a intermediate-level construct to
+            facilitate developing coding
+            fluency](#game-design-patterns-as-a-intermediate-level-construct-to-facilitate-developing-coding-fluency)
+        -   [Potential implications for facilitators and
+            researchers](#potential-implications-for-facilitators-and-researchers)
     -   [Discussion on GDPs, emerging processes and learner
         agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
