--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -12,8 +12,8 @@ title: 4. Exploration of the Formative Learning Design Process
 -   [Chapter Introduction](#chapter-introduction)
 -   [Short vignette illustrating shifts in scope of
     activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
-    -   [Vignette 4.1 - An example of game making activity in
-        P2](#vignette-4.1---an-example-of-game-making-activity-in-p2)
+    -   [Vignette 4.1 - An example of game making
+        activity](#vignette-4.1---an-example-of-game-making-activity)
         -   [Table of Vignette](#table-of-vignette)
     -   [Description of levels of activity illustrated using the
         vignette](#description-of-levels-of-activity-illustrated-using-the-vignette)
@@ -27,28 +27,29 @@ title: 4. Exploration of the Formative Learning Design Process
             and design
             structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
 -   [Summary of design evolution](#summary-of-design-evolution)
-    -   [P1: Explorations and
-        innovations](#p1-explorations-and-innovations)
-    -   [P2: The game making using suggested
-        patterns.](#p2-the-game-making-using-suggested-patterns.)
-    -   [P3: Adding a process drama](#p3-adding-a-process-drama)
-    -   [P4: Adapting to MakeCode Arcade and more formal
-        settings](#p4-adapting-to-makecode-arcade-and-more-formal-settings)
+    -   [P1: Exploratory stage: Oct 2017 - Dec
+        2018](#p1-exploratory-stage-oct-2017---dec-2018)
+    -   [P2: Accelerated game making programme (5 weeks): Jan - Feb
+        2019](#p2-accelerated-game-making-programme-5-weeks-jan---feb-2019)
+    -   [P3: Adding a process drama to the game making programme:
+        April - May
+        2019](#p3-adding-a-process-drama-to-the-game-making-programme-april---may-2019)
+    -   [P4: Adapting to MakeCode Arcade and more formal settings: Jan
+        2020 - September
+        2020](#p4-adapting-to-makecode-arcade-and-more-formal-settings-jan-2020---september-2020)
 -   [Conflicts and design tensions experienced by participants and
     facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
--   [1. Facilitator conflict addressing tensions between privileging
-    participant choices or underlying computing
-    concepts](#facilitator-conflict-addressing-tensions-between-privileging-participant-choices-or-underlying-computing-concepts)
+-   [1. Conflicts stemming from tensions between privileging participant
+    choices or underlying computing and systems
+    concepts](#conflicts-stemming-from-tensions-between-privileging-participant-choices-or-underlying-computing-and-systems-concepts)
     -   [Learning Dimensions Map](#learning-dimensions-map)
-    -   [Observations on tensions which the learning and navigational
-        maps have potential to
-        address.](#observations-on-tensions-which-the-learning-and-navigational-maps-have-potential-to-address.)
+    -   [The potential of learning and navigational
+        maps](#the-potential-of-learning-and-navigational-maps)
 -   [2. Conflicts due to identity clashes and dysfunctional group
     work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
--   [3. Tensions due to lack of access and familiarity to tools and
-    processes](#tensions-due-to-lack-of-access-and-familiarity-to-tools-and-processes)
-    -   [Motivations around in choice of
-        toolset](#motivations-around-in-choice-of-toolset)
+-   [3. Tensions due to lack of access and familiarity to game
+    programming tools and
+    processes](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools-and-processes)
     -   [Design adaptations to facilitate novice use of a code
         playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
         -   [Addressing code syntax
@@ -66,8 +67,9 @@ title: 4. Exploration of the Formative Learning Design Process
         -   [Observations on design behaviours encouraged through use of
             game
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
--   [4. Participant conflict due to lack of relevant technical
-    support](#participant-conflict-due-to-lack-of-relevant-technical-support)
+-   [4. Participant conflict associated with project navigation and use
+    of
+    documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
     -   [Code snippet examples](#code-snippet-examples)
     -   [Stand-alone tutorials](#stand-alone-tutorials)
     -   [Organising tutorials into a linear structure, specifically in
@@ -77,10 +79,7 @@ title: 4. Exploration of the Formative Learning Design Process
         patterns](#structuring-and-using-a-collection-of-game-design-patterns)
 -   [Chapter Discussion](#chapter-discussion)
     -   [On the emergent and mutual nature of the design and research
-        process AND link to
-        agency](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process-and-link-to-agency)
-        -   [Inactivity illuminating the play
-            paradox](#inactivity-illuminating-the-play-paradox)
+        process](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process)
     -   [Discussion on authenticity and agency concerning tools and
         resources](#discussion-on-authenticity-and-agency-concerning-tools-and-resources)
     -   [Summary of barriers and tensions explored in this
@@ -719,7 +718,7 @@ a default screen size, asset creation tools, online community, comments and frie
 
 Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. My choice to use a text code environment risked maximising barriers to participation by not profiting from design decisions in specialist coding software to help novice coders (previously explored in LR). These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration.
 
-Those principles help address the key tension explored in this section. Coding is a tricky process partly due to unfamiliarity with and potential complexity of code authoring tools and environments. To shed light on this conflict and to situate later findings, this section surfaces observations from my journal notes and video data on how participants used the tools introduced and my design adaptations.
+Those principles help address the key tension explored in this section. Learning computer coding presents challenges in part due to unfamiliarity with and potential complexity of code authoring tools and environments [find source]. To shed light on this conflict and to situate later findings, this section surfaces observations from my journal notes and video data on how participants used the tools introduced and my design adaptations.
 
 <!--
 These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration. -->
@@ -1015,9 +1014,9 @@ DEVELOP THIS SECTION -->
 
 ## 4. Participant conflict associated with project navigation and use of documentation
 
-**Nature of conflict**
+**Nature of conflict and how different from previous one**
 
-When game making was underway there were delays when participant knew what they wanted to add to the game but were not clear how to do it. Although I could work with people directly to help them, my limited time with each participant or pair lead to frustrations.  The inability for participants progress due to lack of game and coding practices was compounded in early stages by little or no supporting documentation or supporting resources. Analysis of video data showed that adult participants were aware of the limited time that I could give each group and that this resulted in them restricting how often they or their kids asked for direct help. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
+While the previous section outlined responses to a conflict experienced by partcipants in address a challenge to getting started... this section details a conflict which took place when game making was underway. At times participant knew what new features or changes the wanted to add to the game but were not clear on what computer code was needed to implement it. This cause delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair.  The inability for participants progress due to lack of game and coding practices was compounded in early stages by little or no supporting documentation or supporting resources. Analysis of video data showed that adult participants were aware of the limited time that I could give each group and that this resulted in them restricting how often they or their kids asked for direct help. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
 
 Within AT termniology, these supporting documentation can be seen as a form of secondary stimulation. Double stimulation can be summarised as input
 The work of Sannino, explored this outside of a lab setting in education in a relatively informal setting.
