--- a/_posts/thesis_chapters/tocs/2023-12-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-12-4-Design.md_toc.md
@@ -2,8 +2,8 @@
 -   [Chapter Introduction](#chapter-introduction)
 -   [Short vignette illustrating shifts in scope of
     activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
-    -   [Vignette 4.1 - An example of game making activity in
-        P2](#vignette-4.1---an-example-of-game-making-activity-in-p2)
+    -   [Vignette 4.1 - An example of game making
+        activity](#vignette-4.1---an-example-of-game-making-activity)
         -   [Table of Vignette](#table-of-vignette)
     -   [Description of levels of activity illustrated using the
         vignette](#description-of-levels-of-activity-illustrated-using-the-vignette)
@@ -17,28 +17,29 @@
             and design
             structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
 -   [Summary of design evolution](#summary-of-design-evolution)
-    -   [P1: Explorations and
-        innovations](#p1-explorations-and-innovations)
-    -   [P2: The game making using suggested
-        patterns.](#p2-the-game-making-using-suggested-patterns.)
-    -   [P3: Adding a process drama](#p3-adding-a-process-drama)
-    -   [P4: Adapting to MakeCode Arcade and more formal
-        settings](#p4-adapting-to-makecode-arcade-and-more-formal-settings)
+    -   [P1: Exploratory stage: Oct 2017 - Dec
+        2018](#p1-exploratory-stage-oct-2017---dec-2018)
+    -   [P2: Accelerated game making programme (5 weeks): Jan - Feb
+        2019](#p2-accelerated-game-making-programme-5-weeks-jan---feb-2019)
+    -   [P3: Adding a process drama to the game making programme:
+        April - May
+        2019](#p3-adding-a-process-drama-to-the-game-making-programme-april---may-2019)
+    -   [P4: Adapting to MakeCode Arcade and more formal settings: Jan
+        2020 - September
+        2020](#p4-adapting-to-makecode-arcade-and-more-formal-settings-jan-2020---september-2020)
 -   [Conflicts and design tensions experienced by participants and
     facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
--   [1. Facilitator conflict addressing tensions between privileging
-    participant choices or underlying computing
-    concepts](#facilitator-conflict-addressing-tensions-between-privileging-participant-choices-or-underlying-computing-concepts)
+-   [1. Conflicts stemming from tensions between privileging participant
+    choices or underlying computing and systems
+    concepts](#conflicts-stemming-from-tensions-between-privileging-participant-choices-or-underlying-computing-and-systems-concepts)
     -   [Learning Dimensions Map](#learning-dimensions-map)
-    -   [Observations on tensions which the learning and navigational
-        maps have potential to
-        address.](#observations-on-tensions-which-the-learning-and-navigational-maps-have-potential-to-address.)
+    -   [The potential of learning and navigational
+        maps](#the-potential-of-learning-and-navigational-maps)
 -   [2. Conflicts due to identity clashes and dysfunctional group
     work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
--   [3. Tensions due to lack of access and familiarity to tools and
-    processes](#tensions-due-to-lack-of-access-and-familiarity-to-tools-and-processes)
-    -   [Motivations around in choice of
-        toolset](#motivations-around-in-choice-of-toolset)
+-   [3. Tensions due to lack of access and familiarity to game
+    programming tools and
+    processes](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools-and-processes)
     -   [Design adaptations to facilitate novice use of a code
         playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
         -   [Addressing code syntax
@@ -56,8 +57,9 @@
         -   [Observations on design behaviours encouraged through use of
             game
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
--   [4. Participant conflict due to lack of relevant technical
-    support](#participant-conflict-due-to-lack-of-relevant-technical-support)
+-   [4. Participant conflict associated with project navigation and use
+    of
+    documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
     -   [Code snippet examples](#code-snippet-examples)
     -   [Stand-alone tutorials](#stand-alone-tutorials)
     -   [Organising tutorials into a linear structure, specifically in
@@ -67,10 +69,7 @@
         patterns](#structuring-and-using-a-collection-of-game-design-patterns)
 -   [Chapter Discussion](#chapter-discussion)
     -   [On the emergent and mutual nature of the design and research
-        process AND link to
-        agency](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process-and-link-to-agency)
-        -   [Inactivity illuminating the play
-            paradox](#inactivity-illuminating-the-play-paradox)
+        process](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process)
     -   [Discussion on authenticity and agency concerning tools and
         resources](#discussion-on-authenticity-and-agency-concerning-tools-and-resources)
     -   [Summary of barriers and tensions explored in this
